Mon May 22 00:20:15 EDT 2006    Ryan McCabe <ryan@numb.org>

    * Pulled in patches for Linux from Debian.

    * Pulled in Darwin patches from fink.

    * Pulled in patches for FreeBSD from FreeBSD ports
      (ports/security/oidentd/files/patch-unprivileged_ipv6).

Thu Jan 26 16:32:18 CET 2006    Christof Douma <christof@douma.eu.org>

    * Open masquerading options before dropping permissions on linux.

Fri Jul 11 10:11:38 EDT 2003    Ryan McCabe <ryan@numb.org>

    * Really fix the bug with random ident replies.

    * Build fixes (specifically, for Solaris).

Sun Apr 27 16:01:51 EDT 2003    Ryan McCabe <ryan@numb.org>

    * Released as version 2.0.6.

    * Fixed a build problem on some versions of FreeBSD when NAT support
      is included.
        - Problem reported by John Blazek <freebsd@logicalsolutns.com>

    * Made random replies 12 characters long. I guess some programs don't
      like it when they get a 512-byte long random reply.

Wed Apr 23 19:59:42 EDT 2003    Ryan McCabe <ryan@numb.org>

    * Applied patches from henke@insync.net to
        - Improve PRNG seeding and random number selection.

        - Add support for running in the foreground, logging only to stderr,
          and for inetd support and daemontools support.

Thu Feb 13 23:28:14 EST 2003    Ryan McCabe <ryan@numb.org>

    * Make it build again on recent versions of Darwin.

Tue Feb 12 01:30:45 EST 2003    Ryan McCabe <ryan@numb.org>

    * Released as version 2.0.5.

Tue Feb 11 19:04:19 EST 2003    Ryan McCabe <ryan@numb.org>

    * Added support for connection forwarding on recent versions of
      OpenBSD and on FreeBSD when NAT is disabled.

    * Added a patch from Mieczyslaw Nalewaj  <nami@polbox.com> to add
      support for FreeBSD 5.

    * Added a patch from Elliott Mitchell <ehem@m5p.com> to prevent
      memory leaks in parts of the configuration parser.

Thu Jan  9 13:49:15 EST 2003    Ryan McCabe <ryan@numb.org>
